--- a/index.html
+++ b/index.html
@@ -146,7 +146,134 @@
                 price: 9499,
                 image: "https://images.samsung.com/is/image/samsung/p6pim/eg/ww90t534das1eg/gallery/eg-front-loading-washer-ww90t534das1eg-thumb-531704228"
             },
-            // Add more products here...
+            {
+                id: 5,
+                name: "iPhone 14 Pro",
+                category: "تليفونات",
+                brand: "آبل",
+                price: 42999,
+                image: "https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-14-pro-finish-select-202209-6-7inch-deeppurple?wid=500&hei=500&fmt=jpeg&qlt=95&.v=1663703841896"
+            },
+            {
+                id: 6,
+                name: "MacBook Air M2",
+                category: "لابتوب",
+                brand: "آبل",
+                price: 49999,
+                image: "https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/macbook-air-midnight-select-20220606?wid=500&hei=500&fmt=jpeg&qlt=95&.v=1653084303665"
+            },
+            {
+                id: 7,
+                name: "Samsung QLED 65\"",
+                category: "تلفزيونات",
+                brand: "سامسونج",
+                price: 24999,
+                image: "https://images.samsung.com/is/image/samsung/p6pim/eg/qe65q60bauxtk/gallery/eg-qled-q60b-qe65q60bauxtk-531907754?$500_500_PNG$"
+            },
+            {
+                id: 8,
+                name: "LG OLED 55\"",
+                category: "تلفزيونات",
+                brand: "LG",
+                price: 27999,
+                image: "https://www.lg.com/eg_ar/images/tvs/md07554610/gallery/medium01.jpg"
+            },
+            {
+                id: 9,
+                name: "Dell XPS 13",
+                category: "لابتوب",
+                brand: "ديل",
+                price: 34999,
+                image: "https://i.dell.com/is/image/DellContent/content/dam/ss2/product-images/dell-client-products/notebooks/xps-notebooks/xps-13-9320/media-gallery/xs9320t-xnb-shot-5-1-sl.psd?fmt=png-alpha&pscan=auto&scl=1&wid=500&hei=500&qlt=100,0&resMode=sharp2&size=500,500"
+            },
+            {
+                id: 10,
+                name: "HP Spectre x360",
+                category: "لابتوب",
+                brand: "HP",
+                price: 32999,
+                image: "https://ssl-product-images.www8-hp.com/digmedialib/prodimg/lowres/c08164117.png"
+            },
+            {
+                id: 11,
+                name: "Google Pixel 7 Pro",
+                category: "تليفونات",
+                brand: "جوجل",
+                price: 19999,
+                image: "https://lh3.googleusercontent.com/Z1ckfaRPTY_fXPwW9saKgBMqEkf-7nI8Fj7z1Cx6YlxZXD7uZjYFOoXeDDSBtNvRWg5ZYRMU_wUPkzVqhFVJR3lFELx3OvwjPg=rw-e365-w500"
+            },
+            {
+                id: 12,
+                name: "Sony Bravia 75\"",
+                category: "تلفزيونات",
+                brand: "سوني",
+                price: 39999,
+                image: "https://www.sony.com/image/5d02da5df552836db894cead8a68f5f3?fmt=png-alpha&wid=500&hei=500"
+            },
+            {
+                id: 13,
+                name: "Huawei MateBook X Pro",
+                category: "لابتوب",
+                brand: "هواوي",
+                price: 29999,
+                image: "https://consumer.huawei.com/content/dam/huawei-cbg-site/common/mkt/plp/laptops/matebook-x-pro-2022.png"
+            },
+            {
+                id: 14,
+                name: "OnePlus 11",
+                category: "تليفونات",
+                brand: "ون بلس",
+                price: 17999,
+                image: "https://image01.oneplus.net/ebp/202301/04/1-m00-45-37-cpgm7mO1hleacnraaal7yqkzwpi011.png"
+            },
+            {
+                id: 15,
+                name: "Whirlpool Supreme",
+                category: "غسالات",
+                brand: "ويرلبول",
+                price: 11999,
+                image: "https://www.whirlpool.com/content/dam/global-assets/images/products/washing-machines/front-load/859330006010_1187x1187_front.png"
+            },
+            {
+                id: 16,
+                name: "Toshiba Smart TV 50\"",
+                category: "تلفزيونات",
+                brand: "توشيبا",
+                price: 12999,
+                image: "https://www.toshiba-tv.com/media/images/50U5050EA.png"
+            },
+            {
+                id: 17,
+                name: "Lenovo ThinkPad X1",
+                category: "لابتوب",
+                brand: "لينوفو",
+                price: 27999,
+                image: "https://www.lenovo.com/medias/lenovo-laptop-thinkpad-x1-carbon-gen-10-14-intel-hero.png?context=bWFzdGVyfHJvb3R8MjM1NTEyfGltYWdlL3BuZ3xoOWEvaGE5LzEzMjU1MTI1OTkxNDU0LnBuZ3wzZjU1YzNmYmMzZDgxOTk4ZjA4Y2ZiOGQ3NjFhOGVjNmUyOWYxZmRhOWM2NjBmZWE0NzVjOTU2ZGZiZTk1YTZh"
+            },
+            {
+                id: 18,
+                name: "Samsung Galaxy S23 Ultra",
+                category: "تليفونات",
+                brand: "سامسونج",
+                price: 31999,
+                image: "https://images.samsung.com/is/image/samsung/p6pim/eg/2302/gallery/eg-galaxy-s23-ultra-s918-sm-s918bzkcmea-thumb-534863401"
+            },
+            {
+                id: 19,
+                name: "Bosch Series 8",
+                category: "غسالات",
+                brand: "بوش",
+                price: 13999,
+                image: "https://media3.bosch-home.com/Product_Shots/1600x1600/MCSA02498732_WAV28L90BY_def.png"
+            },
+            {
+                id: 20,
+                name: "Asus ROG Zephyrus",
+                category: "لابتوب",
+                brand: "أسوس",
+                price: 44999,
+                image: "https://dlcdnwebimgs.asus.com/gain/D7C0B873-BA89-4A47-B46F-5D9398A69834/w500/h500"
+            }
         ];
 
         let cart = [];
@@ -326,4 +453,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html> 
+</html>
