Update product images to more reliable sources and add fallback

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 category: "تليفونات",
                 brand: "سامسونج",
                 price: 4999,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/levant/sm-a236elbhmea/gallery/levant-galaxy-a23-sm-a236-sm-a236elbhmea-531826124"
+                image: "https://m.media-amazon.com/images/I/61tx9Mq+iJL._AC_SX522_.jpg"
             },
             {
                 id: 2,
@@ -128,7 +128,7 @@
                 category: "تليفونات",
                 brand: "شاومي",
                 price: 5999,
-                image: "https://i01.appmifile.com/v1/MI_18455B3E4DA706226CF7535A58E875F0267/pms_1672739458.60444233!500x500.png"
+                image: "https://m.media-amazon.com/images/I/51d6JWX+F9L._AC_SX522_.jpg"
             },
             {
                 id: 3,
@@ -136,7 +136,7 @@
                 category: "غسالات",
                 brand: "LG",
                 price: 8999,
-                image: "https://www.lg.com/eg_ar/images/washing-machines/md07554743/gallery/D-1.jpg"
+                image: "https://m.media-amazon.com/images/I/61E+4sQknJL._AC_SX522_.jpg"
             },
             {
                 id: 4,
@@ -144,7 +144,7 @@
                 category: "غسالات",
                 brand: "سامسونج",
                 price: 9499,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/eg/ww90t534das1eg/gallery/eg-front-loading-washer-ww90t534das1eg-thumb-531704228"
+                image: "https://m.media-amazon.com/images/I/716YyGRH7EL._AC_SX522_.jpg"
             },
             {
                 id: 5,
@@ -152,7 +152,7 @@
                 category: "تليفونات",
                 brand: "آبل",
                 price: 42999,
-                image: "https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-14-pro-finish-select-202209-6-7inch-deeppurple?wid=500&hei=500&fmt=jpeg&qlt=95&.v=1663703841896"
+                image: "https://m.media-amazon.com/images/I/61XO4bORHUL._AC_SX522_.jpg"
             },
             {
                 id: 6,
@@ -160,7 +160,7 @@
                 category: "لابتوب",
                 brand: "آبل",
                 price: 49999,
-                image: "https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/macbook-air-midnight-select-20220606?wid=500&hei=500&fmt=jpeg&qlt=95&.v=1653084303665"
+                image: "https://m.media-amazon.com/images/I/71f5Eu5lJSL._AC_SX522_.jpg"
             },
             {
                 id: 7,
@@ -168,7 +168,7 @@
                 category: "تلفزيونات",
                 brand: "سامسونج",
                 price: 24999,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/eg/qe65q60bauxtk/gallery/eg-qled-q60b-qe65q60bauxtk-531907754?$500_500_PNG$"
+                image: "https://m.media-amazon.com/images/I/71LJJrKbezL._AC_SX522_.jpg"
             },
             {
                 id: 8,
@@ -176,7 +176,7 @@
                 category: "تلفزيونات",
                 brand: "LG",
                 price: 27999,
-                image: "https://www.lg.com/eg_ar/images/tvs/md07554610/gallery/medium01.jpg"
+                image: "https://m.media-amazon.com/images/I/815pj+0yxbL._AC_SX522_.jpg"
             },
             {
                 id: 9,
@@ -184,7 +184,7 @@
                 category: "لابتوب",
                 brand: "ديل",
                 price: 34999,
-                image: "https://i.dell.com/is/image/DellContent/content/dam/ss2/product-images/dell-client-products/notebooks/xps-notebooks/xps-13-9320/media-gallery/xs9320t-xnb-shot-5-1-sl.psd?fmt=png-alpha&pscan=auto&scl=1&wid=500&hei=500&qlt=100,0&resMode=sharp2&size=500,500"
+                image: "https://m.media-amazon.com/images/I/71G+M7OEFEL._AC_SX522_.jpg"
             },
             {
                 id: 10,
@@ -192,7 +192,7 @@
                 category: "لابتوب",
                 brand: "HP",
                 price: 32999,
-                image: "https://ssl-product-images.www8-hp.com/digmedialib/prodimg/lowres/c08164117.png"
+                image: "https://m.media-amazon.com/images/I/71nf-oQWyGL._AC_SX522_.jpg"
             },
             {
                 id: 11,
@@ -200,7 +200,7 @@
                 category: "تليفونات",
                 brand: "جوجل",
                 price: 19999,
-                image: "https://lh3.googleusercontent.com/Z1ckfaRPTY_fXPwW9saKgBMqEkf-7nI8Fj7z1Cx6YlxZXD7uZjYFOoXeDDSBtNvRWg5ZYRMU_wUPkzVqhFVJR3lFELx3OvwjPg=rw-e365-w500"
+                image: "https://m.media-amazon.com/images/I/71BGpWQXJqL._AC_SX522_.jpg"
             },
             {
                 id: 12,
@@ -208,7 +208,7 @@
                 category: "تلفزيونات",
                 brand: "سوني",
                 price: 39999,
-                image: "https://www.sony.com/image/5d02da5df552836db894cead8a68f5f3?fmt=png-alpha&wid=500&hei=500"
+                image: "https://m.media-amazon.com/images/I/81yL5F4WqML._AC_SX522_.jpg"
             },
             {
                 id: 13,
@@ -216,7 +216,7 @@
                 category: "لابتوب",
                 brand: "هواوي",
                 price: 29999,
-                image: "https://consumer.huawei.com/content/dam/huawei-cbg-site/common/mkt/plp/laptops/matebook-x-pro-2022.png"
+                image: "https://m.media-amazon.com/images/I/61wcXOEFHSL._AC_SX522_.jpg"
             },
             {
                 id: 14,
@@ -224,7 +224,7 @@
                 category: "تليفونات",
                 brand: "ون بلس",
                 price: 17999,
-                image: "https://image01.oneplus.net/ebp/202301/04/1-m00-45-37-cpgm7mO1hleacnraaal7yqkzwpi011.png"
+                image: "https://m.media-amazon.com/images/I/71K84j2O8wL._AC_SX522_.jpg"
             },
             {
                 id: 15,
@@ -232,7 +232,7 @@
                 category: "غسالات",
                 brand: "ويرلبول",
                 price: 11999,
-                image: "https://www.whirlpool.com/content/dam/global-assets/images/products/washing-machines/front-load/859330006010_1187x1187_front.png"
+                image: "https://m.media-amazon.com/images/I/61o+YH6WxIL._AC_SX522_.jpg"
             },
             {
                 id: 16,
@@ -240,7 +240,7 @@
                 category: "تلفزيونات",
                 brand: "توشيبا",
                 price: 12999,
-                image: "https://www.toshiba-tv.com/media/images/50U5050EA.png"
+                image: "https://m.media-amazon.com/images/I/71RxCmvnrbL._AC_SX522_.jpg"
             },
             {
                 id: 17,
@@ -248,7 +248,7 @@
                 category: "لابتوب",
                 brand: "لينوفو",
                 price: 27999,
-                image: "https://www.lenovo.com/medias/lenovo-laptop-thinkpad-x1-carbon-gen-10-14-intel-hero.png?context=bWFzdGVyfHJvb3R8MjM1NTEyfGltYWdlL3BuZ3xoOWEvaGE5LzEzMjU1MTI1OTkxNDU0LnBuZ3wzZjU1YzNmYmMzZDgxOTk4ZjA4Y2ZiOGQ3NjFhOGVjNmUyOWYxZmRhOWM2NjBmZWE0NzVjOTU2ZGZiZTk1YTZh"
+                image: "https://m.media-amazon.com/images/I/71krmFgx5+L._AC_SX522_.jpg"
             },
             {
                 id: 18,
@@ -256,7 +256,7 @@
                 category: "تليفونات",
                 brand: "سامسونج",
                 price: 31999,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/eg/2302/gallery/eg-galaxy-s23-ultra-s918-sm-s918bzkcmea-thumb-534863401"
+                image: "https://m.media-amazon.com/images/I/71Tt0M+KqwL._AC_SX522_.jpg"
             },
             {
                 id: 19,
@@ -264,7 +264,7 @@
                 category: "غسالات",
                 brand: "بوش",
                 price: 13999,
-                image: "https://media3.bosch-home.com/Product_Shots/1600x1600/MCSA02498732_WAV28L90BY_def.png"
+                image: "https://m.media-amazon.com/images/I/61ItrCtGRbL._AC_SX522_.jpg"
             },
             {
                 id: 20,
@@ -272,7 +272,7 @@
                 category: "لابتوب",
                 brand: "أسوس",
                 price: 44999,
-                image: "https://dlcdnwebimgs.asus.com/gain/D7C0B873-BA89-4A47-B46F-5D9398A69834/w500/h500"
+                image: "https://m.media-amazon.com/images/I/71WWNQJUgdL._AC_SX522_.jpg"
             }
         ];
 
@@ -286,7 +286,10 @@
             container.innerHTML = products.map(product => `
                 <div class="col-md-4 col-lg-3 product" data-category="${product.category}" data-brand="${product.brand}">
                     <div class="card product-card">
-                        <img src="${product.image}" class="card-img-top product-image" alt="${product.name}">
+                        <img src="${product.image}" 
+                             class="card-img-top product-image" 
+                             alt="${product.name}"
+                             onerror="this.onerror=null; this.src='https://via.placeholder.com/500x500?text=صورة+غير+متوفرة';">
                         <div class="card-body">
                             <h5 class="card-title">${product.name}</h5>
                             <p class="card-text">
