Update all product images to use Unsplash

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 category: "تليفونات",
                 brand: "سامسونج",
                 price: 4999,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/ae/sm-a236elbjmea/gallery/ae-galaxy-a23-sm-a236-sm-a236elbjmea-533186444?$650_519_PNG$"
+                image: "https://images.unsplash.com/photo-1610945265064-0e34e5519bbf?w=500&q=80"
             },
             {
                 id: 2,
@@ -134,7 +134,7 @@
                 category: "تليفونات",
                 brand: "شاومي",
                 price: 5999,
-                image: "https://i02.appmifile.com/763_operator_sg/10/03/2023/fe25977dd42cf0a2d82c578c01a87fa3.png"
+                image: "https://images.unsplash.com/photo-1598327105666-5b89351aff97?w=500&q=80"
             },
             {
                 id: 3,
@@ -142,7 +142,7 @@
                 category: "غسالات",
                 brand: "LG",
                 price: 8999,
-                image: "https://www.lg.com/eg_ar/images/washing-machines/md07529605/gallery/D-1.jpg"
+                image: "https://images.unsplash.com/photo-1626806787461-102c1bfaaea1?w=500&q=80"
             },
             {
                 id: 4,
@@ -150,7 +150,7 @@
                 category: "غسالات",
                 brand: "سامسونج",
                 price: 9499,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/ae/ww90t534dax1ae/gallery/ae-front-loading-washer-ww90t534dax1ae-374535-ww90t534dax1ae-530934614?$1300_1038_PNG$"
+                image: "https://images.unsplash.com/photo-1626806787431-8a6c9fc2fe69?w=500&q=80"
             },
             {
                 id: 5,
@@ -158,7 +158,7 @@
                 category: "تليفونات",
                 brand: "آبل",
                 price: 42999,
-                image: "https://m.media-amazon.com/images/I/61XO4bORHUL._AC_SX522_.jpg"
+                image: "https://images.unsplash.com/photo-1678652197831-2d180705cd2c?w=500&q=80"
             },
             {
                 id: 6,
@@ -166,7 +166,7 @@
                 category: "لابتوب",
                 brand: "آبل",
                 price: 49999,
-                image: "https://m.media-amazon.com/images/I/71f5Eu5lJSL._AC_SX522_.jpg"
+                image: "https://images.unsplash.com/photo-1517336714731-489689fd1ca8?w=500&q=80"
             },
             {
                 id: 7,
@@ -174,7 +174,7 @@
                 category: "تلفزيونات",
                 brand: "سامسونج",
                 price: 24999,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/ae/qa65q60cauxzn/gallery/ae-qled-q60c-qa65q60cauxzn-537686087?$1300_1038_PNG$"
+                image: "https://images.unsplash.com/photo-1593784991095-a205069470b6?w=500&q=80"
             },
             {
                 id: 8,
@@ -182,7 +182,7 @@
                 category: "تلفزيونات",
                 brand: "LG",
                 price: 27999,
-                image: "https://www.lg.com/eg_ar/images/tvs/md07554610/gallery/D-1.jpg"
+                image: "https://images.unsplash.com/photo-1593784991095-a205069470b6?w=500&q=80"
             },
             {
                 id: 9,
@@ -190,7 +190,7 @@
                 category: "لابتوب",
                 brand: "ديل",
                 price: 34999,
-                image: "https://i.dell.com/is/image/DellContent/content/dam/ss2/product-images/dell-client-products/notebooks/xps-notebooks/xps-13-9315/media-gallery/notebook-xps-9315-nt-blue-gallery-1.psd?fmt=png-alpha&pscan=auto&scl=1&hei=402&wid=402&qlt=100,1&resMode=sharp2&size=402,402"
+                image: "https://images.unsplash.com/photo-1593642632823-8f785ba67e45?w=500&q=80"
             },
             {
                 id: 10,
@@ -198,7 +198,7 @@
                 category: "لابتوب",
                 brand: "HP",
                 price: 32999,
-                image: "https://ssl-product-images.www8-hp.com/digmedialib/prodimg/lowres/c08483494.png"
+                image: "https://images.unsplash.com/photo-1544731612-de7f96afe55f?w=500&q=80"
             },
             {
                 id: 11,
@@ -206,7 +206,7 @@
                 category: "تليفونات",
                 brand: "جوجل",
                 price: 19999,
-                image: "https://lh3.googleusercontent.com/spp/AE_ITi2LHKQq-5D8-KP1y8Mwl2Vc9HEfgKxHSXR8vxqABMB9TIRm_1G3JH7KjX9_Jh8GZGtFXxFtc_Ij-7z4YEVOFNlcWpXJMrCHFnNXNdxMtAEqSOWR=w2560-h1440-rw-e365-v1-nu-pa-sc0x0"
+                image: "https://images.unsplash.com/photo-1598763639616-bab1fc566efd?w=500&q=80"
             },
             {
                 id: 12,
@@ -214,7 +214,7 @@
                 category: "تلفزيونات",
                 brand: "سوني",
                 price: 39999,
-                image: "https://m.media-amazon.com/images/I/81yL5F4WqML._AC_SX522_.jpg"
+                image: "https://images.unsplash.com/photo-1593784991095-a205069470b6?w=500&q=80"
             },
             {
                 id: 13,
@@ -222,7 +222,7 @@
                 category: "لابتوب",
                 brand: "هواوي",
                 price: 29999,
-                image: "https://consumer.huawei.com/content/dam/huawei-cbg-site/common/mkt/plp/laptops/matebook-x-pro-2022-s.png"
+                image: "https://images.unsplash.com/photo-1496181133206-80ce9b88a853?w=500&q=80"
             },
             {
                 id: 14,
@@ -230,7 +230,7 @@
                 category: "تليفونات",
                 brand: "ون بلس",
                 price: 17999,
-                image: "https://image01.oneplus.net/ebp/202212/27/1-m00-47-45-rb8bzmqp5ekaedksaaibohhm0hs013.png"
+                image: "https://images.unsplash.com/photo-1616348436168-de43ad0db179?w=500&q=80"
             },
             {
                 id: 15,
@@ -238,7 +238,7 @@
                 category: "غسالات",
                 brand: "ويرلبول",
                 price: 11999,
-                image: "https://www.whirlpool.com.eg/media/catalog/product/cache/1/image/1200x/17f82f742ffe127f42dca9de82fb58b1/f/w/fwdg961483wbvgccex_front_1.jpg"
+                image: "https://images.unsplash.com/photo-1626806787431-8a6c9fc2fe69?w=500&q=80"
             },
             {
                 id: 16,
@@ -246,7 +246,7 @@
                 category: "تلفزيونات",
                 brand: "توشيبا",
                 price: 12999,
-                image: "https://www.toshiba-tv.com/media/images/43U5050VE.png"
+                image: "https://images.unsplash.com/photo-1593784991095-a205069470b6?w=500&q=80"
             },
             {
                 id: 17,
@@ -254,7 +254,7 @@
                 category: "لابتوب",
                 brand: "لينوفو",
                 price: 27999,
-                image: "https://www.lenovo.com/medias/lenovo-laptops-thinkpad-x1-carbon-gen-10-14-intel-hero.png?context=bWFzdGVyfHJvb3R8MzE1MjE4fGltYWdlL3BuZ3xoODEvaGM5LzE0ODg4NDc1ODk5OTM0LnBuZ3wzZjU1YzNmYmMzZDgxOTk4ZjA4Y2ZiOGQ3NjFhOGVjNmUyOWYxZmRhOWM2NjBmZWE0NzVjOTU2ZGZiZTk1YTZh"
+                image: "https://images.unsplash.com/photo-1588872657578-7efd1f1555ed?w=500&q=80"
             },
             {
                 id: 18,
@@ -262,7 +262,7 @@
                 category: "تليفونات",
                 brand: "سامسونج",
                 price: 31999,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/ae/2302/gallery/ae-galaxy-s23-ultra-s918-sm-s918bzkcmea-534859681?$650_519_PNG$"
+                image: "https://images.unsplash.com/photo-1610945264803-c22b62d2a7b3?w=500&q=80"
             },
             {
                 id: 19,
@@ -270,7 +270,7 @@
                 category: "غسالات",
                 brand: "بوش",
                 price: 13999,
-                image: "https://www.bosch-home.com.eg/Files/Bosch2/Bosch_Product_Images/1200x650/WAX32M40FG_1200x650.jpg"
+                image: "https://images.unsplash.com/photo-1626806787431-8a6c9fc2fe69?w=500&q=80"
             },
             {
                 id: 20,
@@ -278,7 +278,7 @@
                 category: "لابتوب",
                 brand: "أسوس",
                 price: 44999,
-                image: "https://dlcdnwebimgs.asus.com/files/media/9BFCFA82-44E7-40E9-A45F-4ABED273F687/v1/images/large/1.png"
+                image: "https://images.unsplash.com/photo-1603302576837-37561b2e2302?w=500&q=80"
             }
         ];
 
