Update Whirlpool image to use Pexels CDN

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 category: "غسالات",
                 brand: "ويرلبول",
                 price: 11999,
-                image: "https://images.unsplash.com/photo-1610557892470-55d587b6736c?w=500&q=80"
+                image: "https://images.pexels.com/photos/5816934/pexels-photo-5816934.jpeg?auto=compress&cs=tinysrgb&w=500"
             },
             {
                 id: 16,
