Integrate Botpress chatbot with Arabic support

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>متجر إلكتروني</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/05/16/15/20250516151504-NOZ5039Y.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
         
@@ -67,6 +69,25 @@
             border-radius: 50%;
             padding: 0.25rem 0.5rem;
             font-size: 0.8rem;
+        }
+
+        /* Custom styles for Botpress chat widget */
+        .bp-widget {
+            left: 20px !important;
+            right: auto !important;
+            z-index: 9999 !important;
+        }
+
+        .bp-widget-web .bp-widget-side {
+            left: 20px !important;
+            right: auto !important;
+        }
+
+        /* Ensure chat widget doesn't overlap with content */
+        @media (max-width: 768px) {
+            .container {
+                margin-bottom: 80px;
+            }
         }
     </style>
 </head>
@@ -462,5 +483,36 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Initialize Botpress chat widget with custom configuration
+        window.botpressWebChat.init({
+            "composerPlaceholder": "اكتب رسالتك هنا...",
+            "botConversationDescription": "مساعد المتجر",
+            "botId": "NOZ5039Y",
+            "hostUrl": "https://cdn.botpress.cloud/webchat/v2.5",
+            "messagingUrl": "https://messaging.botpress.cloud",
+            "clientId": "NOZ5039Y",
+            "lazySocket": true,
+            "frontendVersion": "v2.5",
+            "showPoweredBy": false,
+            "theme": "light",
+            "themeColor": "#2563eb",
+            "hideWidget": false,
+            "disableAnimations": false,
+            "closeOnEscape": false,
+            "showConversationsButton": true,
+            "enableTranscriptDownload": false,
+            "stylesheet": "https://webchat-styler-css.botpress.app/prod/code/4c06c300-9359-4c23-a8a6-b82aa18e48a1/v31894/style.css",
+            "className": "bp-widget-web",
+            "containerWidth": "100%25",
+            "layoutWidth": "100%25",
+            "showCloseButton": true,
+            "enableConversationDeletion": true,
+            "useSessionStorage": true,
+            "avatarUrl": "https://avatars.githubusercontent.com/u/65810938?v=4",
+            "locale": "ar",
+            "defaultLanguage": "ar"
+        });
+    </script>
 </body>
 </html>
