--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>متجر إلكتروني</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Botpress Webchat -->
+    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/05/16/15/20250516151504-NOZ5039Y.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
         
@@ -69,7 +72,7 @@
             font-size: 0.8rem;
         }
 
-        /* Updated Chatbot styles */
+        /* Chatbot styles */
         .bp-widget-widget {
             right: 20px !important;
             left: auto !important;
@@ -574,10 +577,35 @@
         getCart(); // Initial cart fetch
     </script>
 
-    <!-- Botpress Webchat -->
-    <iframe 
-        src="https://cdn.botpress.cloud/webchat/v2.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/05/16/15/20250516151504-6BNV4UI7.json"
-        style="position: fixed; bottom: 20px; right: 20px; height: 500px; width: 300px; border: none; z-index: 9999;"
-    ></iframe>
+    <!-- Chatbot initialization -->
+    <script>
+        window.botpressWebChat.init({
+            "composerPlaceholder": "اكتب رسالتك هنا...",
+            "botConversationDescription": "مساعد المتجر",
+            "botId": "NOZ5039Y",
+            "hostUrl": "https://cdn.botpress.cloud/webchat/v2.5",
+            "messagingUrl": "https://messaging.botpress.cloud",
+            "clientId": "NOZ5039Y",
+            "webhookId": "NOZ5039Y",
+            "lazySocket": false,
+            "frontendVersion": "v2.5",
+            "showPoweredBy": false,
+            "theme": "light",
+            "themeColor": "#2563eb",
+            "hideWidget": false,
+            "disableAnimations": false,
+            "closeOnEscape": false,
+            "showConversationsButton": true,
+            "enableTranscriptDownload": false,
+            "className": "bp-widget-web",
+            "containerWidth": "100%",
+            "layoutWidth": "100%",
+            "showCloseButton": false,
+            "enableConversationDeletion": false,
+            "useSessionStorage": true,
+            "locale": "ar",
+            "defaultLanguage": "ar"
+        });
+    </script>
 </body>
 </html>
